# sqlalchemy-postgresql-relaxed

./: CHANGES.rst  DEVELOP.rst  LICENSE  README.rst  pyproject.toml
.github/workflows/: tests.yml
sqlalchemy_postgresql_relaxed/: asyncpg.py  base.py  psycopg.py
tests/: conftest.py  test_cratedb_pandas_read.py  test_cratedb_pandas_write.py  test_cratedb_polars_read.py  test_cratedb_sqlalchemy.py
